since it'll become more general. we change the name

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "ngurajeka/phalcon-crud",
-    "description": "Crud Module for Phalcon",
+    "name": "ngurajeka/phalcon",
+    "description": "Module for Phalcon",
     "type": "library",
     "require": {
         "php": ">=5.4.0",
